--- a/style.css
+++ b/style.css
@@ -7,5 +7,166 @@
 
 body{
   background:#080808;
-  color:#fff;
+  color:#1c0606;
+  color:#ffffff;
 }
+#header{
+  width:100%;
+  height:100vh;
+  background-image:url(images/abhi.jpg);
+  background-repeat:no-repeat;
+  background-size:cover;
+  /* background-size:100px; */
+  /* background-size:cover; */
+  background-position:center;
+}
+.container{
+  padding:10px 10%;
+}
+
+.nav{
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+  flex-wrap:wrap;
+}
+
+nav ul li{
+  display:inline-block;
+  list-style:none;
+  margin:10px 20px;
+}
+
+nav ul li a{
+  color:#ffffff;
+  text-decoration: none;
+  font-size:18px;
+  position:relative;
+}
+
+nav ul li a::after{
+  content:'';
+  width:0; /*To Hide the underline thing*/
+  height:3px;
+  background:#ff004f;
+  position:absolute;
+  left:0;
+  bottom:-6px;
+  /* transition:0.5s; */
+  transition:0.25s;
+}
+nav ul li a:hover::after{
+  width:100%; /*Initially we set the width to 0. On hovering it would change to 100%"*/
+  /* transition:0.5s; */
+  /* transition:0.25s; */
+}
+
+.header-text{
+  margin-top:20%;
+  font-size:30px;
+}
+
+.header-text h1{
+  font-size:25px;
+  margin-top:20px;
+}
+
+.header-text h1 span{
+  color:#ff004f;
+}
+
+
+#name{
+  color:#ffffff;
+  font-size:35px;
+}
+#name #first-letter{
+  color:#ff004f;
+  font-size:42px;
+}
+
+/* #header #name::not(::first-letter){
+  color:#fff;
+  font-size:30px;
+
+} */
+
+/* ------------------ABOut--------- */
+#id{
+  padding:80px 0;
+  color:#ababab;
+}
+
+.row{
+  display:flex;
+  justify-content:space-between;
+  flex-wrap:wrap;
+}
+
+.about-col-1{
+  flex-basis:35%;
+}
+
+.about-col-1 img{
+  width:100%;
+  /* border-radius:15px; */
+}
+
+.about-col-2{
+  flex-basis:60%;
+}
+
+.sub-title{
+  font-size:60px;
+  font-weight:600;
+  color:#ffffff;
+}
+
+.tab-titles{
+  display:flex;
+  margin:20px 0 40px;
+  /* flex-direction: column; */
+}
+
+.tab-links{
+  margin-right:50px;
+  font-size:18px;
+  font-weight:500;
+  cursor:pointer;
+  position:relative;
+}
+
+.tab-links::after{
+  content:'';
+  width:0;
+  height: 3px;
+  background:#ff004f;
+  position:absolute;
+  left:0;
+  bottom:-8px;
+  transition:0.5s;
+
+}
+
+.tab-links.active-link::after{
+  width:50%;
+}
+
+.tab-contents ul li{
+  list-style:none;
+  margin:10px 0;
+}
+
+.tab-contents ul li span{
+  color:#ff004f;
+  font-size:14px;
+}
+
+.tab-contents{
+  display:none; /*To hide all the details */
+}
+
+.tab-contents.active-tab{ /*There should not be any space in between different classes */
+  display:block;
+}
+
