--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
   font-family:'Popins',sans-serif;
   box-sizing:border-box;
 }
-
+html{
+  scroll-behavior:smooth;
+}
 body{
   background:#080808;
   color:#1c0606;
@@ -13,7 +15,7 @@ body{
 #header{
   width:100%;
   height:100vh;
-  background-image:url(images/abhi.jpg);
+  /* background-image:url(images/abhibg.PNG); */
   background-repeat:no-repeat;
   background-size:cover;
   /* background-size:100px; */
@@ -77,6 +79,8 @@ nav ul li a:hover::after{
 
 
 #name{
+  /* width:10px; */
+  /* display:inline-block; */
   color:#ffffff;
   font-size:35px;
 }
@@ -128,7 +132,7 @@ nav ul li a:hover::after{
 
 .about-col-1 img{
   width:100%;
-  /* border-radius:15px; */
+   border-radius:6px;
 }
 
 .about-col-2{
@@ -392,3 +396,106 @@ form .btn2{
   color:#ff004f;
 }
 
+nav .fa-smallscreen{
+  display:none;
+}
+
+#msg{
+  color:white;
+  margin-top:-20px;
+  display:block;
+
+}
+
+/* --------------------CSS For Small Screens --------*/
+
+
+@media only screen and (max-width:600px){ /*min is 0*/
+  #header{
+    width:100%;
+    height:100vh;
+    /* background-image:url(images/abhibg.PNG); */
+    background-repeat:no-repeat;
+    background-size:cover;
+    /* background-size:100px; */
+    /* background-size:cover; */
+    background-position:center;
+  }
+
+  .hedaer-text{
+    margin-top:100%;
+    font-size:16px;
+  }
+  .header-text h1{
+    font-size:30px;
+  }
+
+  nav .fa-smallscreen{
+    display:block;
+    font-size:25px;
+  }
+
+  nav ul{
+    background:#ff004f;
+    position:fixed;
+    top:0;
+    right:-200px;
+    width:200px;
+    height:100vh;
+    padding-top:50px;
+    z-index:2;
+    transition:right 0.5s;
+  }
+
+  nav ul li{
+    display:block;
+    margin:25px;
+  }
+
+  nav ul .fa-smallscreen{
+    position:absolute;
+    top:25px;
+    left:25px;
+    cursor:pointer;
+
+  }
+
+  .sub-title{
+    font-size:40px;
+  }
+
+  .about-col-1, .about-col-2{
+    flex-basis: 100%;
+  }
+
+  .about-col-1{
+    margin-bottom:30px;
+  }
+
+  .about-col-2{
+    font-size:14px;
+  }
+
+  .tab-links{
+    font-size:15px;
+    margin-right:20px;
+  }
+
+  .contact-left, .contact-right{
+    flex-basis: 100%;
+  }
+
+  .copyright{
+    font-size:14px;
+
+  }
+
+  input[type="text"]::placeholder,
+  input[type="email"]::placeholder,
+  input[type="tel"]::placeholder,
+  input[type="message"]::placeholder{
+    font-size: 16px; 
+  }
+
+
+}
