--- a/style.css
+++ b/style.css
@@ -25,8 +25,13 @@ body{
 .container{
   padding:10px 10%;
 }
-
-.nav{
+.logo{
+  display: flex;
+  align-items: center; /* Vertical alignment */
+  justify-content: space-between; /* Horizontal alignment */
+  
+}
+nav{
   display:flex;
   align-items:center;
   justify-content: space-between;
@@ -140,7 +145,7 @@ nav ul li a:hover::after{
 }
 
 .sub-title{
-  font-size:60px;
+  font-size:40px;
   font-weight:600;
   color:#ffffff;
 }
@@ -194,14 +199,14 @@ nav ul li a:hover::after{
 }
 
 /* -----------------services-------- */
-.services-list{
+.interests-list{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
   grid-gap:40px;
   margin-top:50px;
 }
 
-.services-list div{
+.interests-list div{
   background:#262626;
   padding:40px;
   font-size:13px;
@@ -211,18 +216,18 @@ nav ul li a:hover::after{
 
 }
 
-.services-list i{
+.interests-list i{
   font-size: 50px;
   margin-bottom: 30px;
 }
 
-.services-list div h2{
+.interests-list div h2{
   font-size:30px;
   font-weight:500;
   margin-bottom:15px;
 }
 
-.services-list div a{
+.interests-list div a{
   text-decoration:none;
   color:#ffffff;
   font-size:12px;
@@ -230,7 +235,7 @@ nav ul li a:hover::after{
   display:inline-block;
 }
 
-.services-list div:hover{
+.interests-list div:hover{
   background:#ff004f;
   transform:translateY(-10px);
 
@@ -414,7 +419,7 @@ nav .fa-smallscreen{
   #header{
     width:100%;
     height:100vh;
-    /* background-image:url(images/abhibg.PNG); */
+    background-image:url(images/abhit.PNG); 
     background-repeat:no-repeat;
     background-size:cover;
     /* background-size:100px; */
